# ThymePod

./: .gitignore  .gitmodules  AM_200_Q460460_LK_2ef8083631.dwg  AM_200_Q460460_LK_2ef8083631.dxf  README.md
3D/: AM200Q460460LK v15.step  AM200Q460460LK_mono.step  ThymePodPro-NewDesign v24-bottom.step  ThymePodPro-NewDesign v24-top.step  便携式USB Hi-Fi耳放 v21_down.step  便携式USB Hi-Fi耳放 v21_up.step
Arduino/AdcHeadPhoneLineControl/: AdcHeadPhoneLineControl.ino
Arduino/LTC2954-1-PMIC/: LTC2954-1-PMIC.ino
ESP32S3-IDF_AMOLED_LVGL-V8/: sdkconfig
ESP32S3-IDF_AMOLED_LVGL-V8/main/: main.c
ESP32S3-IDF_AMOLED_LVGL-V8_MusicPlayer/: CMakeLists.txt  MUSIC_PLAYER_README.md  MUSIC_PLAYER_SUMMARY.md  demo_music_player.py  sdkconfig  sdkconfig.defaults
ESP32S3-IDF_AMOLED_LVGL-V8_MusicPlayer/components/ESP32-audioI2S/: CMakeLists.txt
ESP32S3-IDF_AMOLED_LVGL-V8_MusicPlayer/components/ESP32-audioI2S/ESP32-audioI2S/src/: Audio.cpp  Audio.h
ESP32S3-IDF_AMOLED_LVGL-V8_MusicPlayer/components/esp_lcd_qspi_amoled/: esp_lcd_qspi_amoled.c
ESP32S3-IDF_AMOLED_LVGL-V8_MusicPlayer/components/esp_lcd_touch_cst820/: esp_lcd_touch_cst820.c
ESP32S3-IDF_AMOLED_LVGL-V8_MusicPlayer/main/: CMakeLists.txt  config.h  idf_component.yml  lvgl_amoled.c  main.c  main.cpp  music_player_ui.c  music_player_ui.h
ESP32S3_AM200Q460460LK/: platformio.ini
ESP32S3_AM200Q460460LK/src/: Arduino_GFX_dev_device.h  graphicstest.cpp  sd_player.cpp
ESP32S3_AM200Q460460LK_Player/: platformio.ini
ESP32S3_AM200Q460460LK_Player/src/: Arduino_GFX_dev_device.h  graphicstest.cpp
PlatformIO/ESP32S3_BMI270/: platformio.ini
PlatformIO/ESP32S3_BMI270/src/: hal_imu.cpp  main.cpp
PlatformIO/ESP32S3_EmptyProject/: platformio.ini
PlatformIO/ESP32S3_I2C_Scan/: platformio.ini  post_upload.py
PlatformIO/ESP32S3_I2C_Scan/src/: main.cpp
PlatformIO/ESP32S3_INS5699S/: platformio.ini
PlatformIO/ESP32S3_MAX17048/: platformio.ini
(+5 files in other folders)
